--- a/main.html
+++ b/main.html
@@ -7,6 +7,25 @@
 </head>
 
 <body>
+	<table>
+		<thead>
+			<th>roll number</th>
+			<th>name</th>
+		</thead>
+		<tbody>
+			<tr>
+				<td>1234</td>
+			<td>axy</td>
+			</tr>
+			
+			<tr>
+				<td>1235</td>
+			<td>asjas</td>
+			</tr>
+			
+		</tbody>
+		
+	</table>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
